--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<p> Hello World</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    
+    <title>First Example</title>
+</head>
+<body>
+    <div>Hello World from Haris</div>
+</body>
+</html>
